@@ -1,5 +1,8 @@
 2006-10-04  Ales Hakl  <ales at hakl dot net>
 
+	* lib/regex.c (dfsch_regex_register): Simple (match/no match) regular 
+	expression support
+
 	* scm/supermarket.scm: Exit after predefined number of iterations, 
 	do not loop forever
 
